# aoc2023

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs  util.rs
src/day1/: solution.rs
src/day2/: mod.rs  solution.rs
src/day3/: solution.rs
